<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimens_petite"
    card_view:cardCornerRadius="@dimen/dimens_petite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/photo_size"
        android:padding="@dimen/dimens_petite">

        <TextView
            android:id="@+id/no_of_posts"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_petite"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/no_posts"
            card_view:layout_constraintBottom_toTopOf="@+id/posts"
            card_view:layout_constraintEnd_toStartOf="@+id/no_of_followers"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/posts"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_petite"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/posts"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/followers"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/no_of_posts" />

        <TextView
            android:id="@+id/no_of_followers"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_petite"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/no_followers"
            card_view:layout_constraintBottom_toTopOf="@+id/followers"
            card_view:layout_constraintEnd_toStartOf="@+id/no_of_following"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/no_of_posts"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_petite"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/followers"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/following"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/posts"
            card_view:layout_constraintTop_toBottomOf="@+id/no_of_followers" />

        <TextView
            android:id="@+id/no_of_following"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_petite"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/no_following"
            card_view:layout_constraintBottom_toTopOf="@+id/following"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/no_of_followers"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/following"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_petite"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/following"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toEndOf="@+id/followers"
            card_view:layout_constraintTop_toBottomOf="@+id/no_of_following" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>